--- a/header.html
+++ b/header.html
@@ -33,80 +33,24 @@
                         </li>
 
                         <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa-solid fa-cash-register"></i> <span> Purchases </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="../purchases/add_purch.html" target="_self">New Purchase</a></li>
+                                <li><a href="../purchases/purch_list.html" target="_self">Purchase List</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary"><i
                                     class="ti-shopping-cart-full"></i><span> Sales </span> <span
                                     class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Sales</a></li>
-                                <li><a href="#" target="_self">Sales List</a></li>
-                                <li><a href="#" target="_self">New Sales Return</a></li>
-                                <li><a href="#" target="_self">Sales Return List</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-id-badge"></i> <span>Customers </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Customers</a></li>
-                                <li><a href="#" target="_self">Customers List</a></li>
-                                <li><a href="#" target="_self">Import Customers</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="fa-solid fa-cash-register"></i> <span> Purchase </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Purchase</a></li>
-                                <li><a href="#" target="_self">Purchase List</a></li>
-                                <li><a href="#" target="_self">New Purchase Return</a></li>
-                                <li><a href="#" target="_self">Purchase Return</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="fa-solid fa-store"></i> <span> Suppliers </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Suppliers</a></li>
-                                <li><a href="#" target="_self">Suppliers List</a></li>
-                                <li><a href="#" target="_self">Import Suppliers</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="fa fa-list-alt"></i> <span> Items </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Item</a></li>
-                                <li><a href="#" target="_self">Items List</a></li>
-                                <li><a href="#" target="_self">New Category</a></li>
-                                <li><a href="#" target="_self">Categories List</a></li>
-                                <li><a href="#" target="_self">New Brand</a></li>
-                                <li><a href="#" target="_self">Brands List</a></li>
-                                <li><a href="#" target="_self">Print Labels</a></li>
-                                <li><a href="#" target="_self">Import Items</a></li>
-                            </ul>
-                        </li>
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="fas fa-money-bill-alt"></i> <span> Expenses </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Expense</a></li>
-                                <li><a href="#" target="_self">Expenses List</a></li>
-                                <li><a href="#" target="_self">New Category</a></li>
-                                <li><a href="#" target="_self">Categories List</a></li>
+                                <li><a href="../sales/add_sales.html" target="_self">New Sales</a></li>
+                                <li><a href="../sales/sales_list.html" target="_self">Sales List</a></li>
+                                <li><a href="../sales/credit_sales.html" target="_self">Credit Sales</a></li>
                             </ul>
                         </li>
 
@@ -116,18 +60,7 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Profit & Loss Reports</a></li>
-                                <li><a href="#" target="_self">Purchase Report</a></li>
-                                <li><a href="#" target="_self">Purchase Return Report</a></li>
-                                <li><a href="#" target="_self">Purchase Payments Report</a></li>
-                                <li><a href="#" target="_self">Items Sales Report</a></li>
-                                <li><a href="#" target="_self">Items Purchase Report</a></li>
                                 <li><a href="#" target="_self">Sales Report</a></li>
-                                <li><a href="#" target="_self">Sales Return Report</a></li>
-                                <li><a href="#" target="_self">Sales Payment Report</a></li>
-                                <li><a href="#" target="_self">Stock Report</a></li>
-                                <li><a href="#" target="_self">Expense Report</a></li>
-                                <li><a href="#" target="_self">Expired Items Report</a></li>
                             </ul>
                         </li>
 
@@ -146,23 +79,12 @@
                             <a href="javascript:void(0);" class="waves-effect waves-primary"><i
                                     class="ti-settings"></i><span> Settings </span> <span class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Comapany Profile</a></li>
-                                <li><a href="#" target="_self">Units List</a></li>
-                                <li><a href="#" target="_self">Payment Types</a></li>
-                                <li><a href="#" target="_self">Currency List</a></li>
+                                <li><a href="#" target="_self">Company Profile</a></li>
+                                <li><a href="#" target="_self">Add Branches</a></li>
                                 <li><a href="#" target="_self">Change Password</a></li>
                                 <li><a href="#" target="_self">Database Backup</a></li>
                             </ul>
                         </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="fa fa-question-circle"></i> <span> Help </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-
-                        </li>
-
                     </ul>
 
                     <div class="clearfix"></div>
