--- a/users/amend.html
+++ b/users/amend.html
@@ -185,7 +185,7 @@
                                     <div class="form-horizontal" role="form">
                                         <div class="form-field">
                                             <label for="userdd"></label>
-                                            <select id="userdd" value="userdd" name="userdd" class="chzn-select">
+                                            <select id="userdd" value="userdd" name="userdd" class="chzn-select" style="width: 100%;">
                                                 <option value="" selected>--search username--</option>
                                                 <option value="Niwaha Edwin">A</option>
                                                 <option value="Nabaasa Faith">B</option>
@@ -211,9 +211,8 @@
                                             <select id="ddbranch" type="text" value="ddbranch" name="ddbranch"
                                                 autocomplete="off" class="form-control" width="100%">
                                                 <option selected value="">--select branch--</option>
-                                                <option>Manager</option>
-                                                <option>Sales</option>
-                                                <option>Purchase</option>
+                                                <option>Matuga</option>
+                                                <option>Maganjo</option>
                                             </select>
                                             <small></small>
                                         </div>
@@ -257,8 +256,9 @@
                                     </div>
 
                                     <div class="mb-3">
-                                        <input type="submit" value="Update" class="btn btn-primary d-block w-100 mt-3"
-                                            style="height: 47px;">
+                                        <input type="submit" value="Update" class="btn-primary"
+                                        style="width: 50%; height: 40px; border-radius: 5px;">
+
                                     </div>
                                     <!-- <hr style="border: 5px solid green; border-radius: 5px;"> -->
 
